fix: extra space at bottom of left sidebar

--- a/groton.css
+++ b/groton.css
@@ -1,6 +1,3 @@
-a[href*="masquerade"][class*="Button"][data-method="post"]
-{
-	position: absolute;
-	top: 4em;
-	left: 1em;
+#left-side #section-tabs {
+  margin-bottom: 1in;
 }
